add module to compilation